# bsp-sekai

./: CMakeLists.txt  README.md  toolchain-cross-mingw32-linux.cmake
code/: bsp.c  bsp.h  bsp_dk.c  bsp_ef2.c  bsp_fakk.c  bsp_mohaa.c  bsp_q3.c  bsp_q3ihv.c  bsp_q3test103.c  bsp_q3test106.c  bsp_sof2.c  convert_nsco.c  entity.c  entity.h  image.c  image.h  image_tga.c  main.c  q_shared.h  qcommon.h  sekai.h  strbuf.c  strbuf.h  xbuf.c  xbuf.h
